--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
   border-bottom: 5px solid #222222;
   border-top: 5px solid #222222;
   padding: 50px;
+  font-family: 'Caveat', cursive;
+  font-family: 'Mali', cursive;
+  font-family: 'Satisfy', cursive;
   background-image: url('https://images.unsplash.com/photo-1501820488136-72669149e0d4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
         background-repeat: no-repeat;
         background-attachment: fixed;
